--- a/src/_includes/post.njk
+++ b/src/_includes/post.njk
@@ -1,13 +1,12 @@
 ---
-layout: "default.njk"
+layout: default.njk
 ---
+<header class="post-header">
+  <h1>{{ title }}</h1>
+  <p class="post-meta">{{ date | dateFilter }}</p>
+</header>
 <article class="blog-post">
-    <header class="post-header">
-        <h1>{{ title }}</h1>
-        <p class="post-meta">{{ date | dateFilter }}</p>
-    </header>
-
-    <div class="post-content">
-        {{ content | safe }}
-    </div>
+  <div class="post-content">
+    {{ content | safe }}
+  </div>
 </article>
