--- a/src/resources.njk
+++ b/src/resources.njk
@@ -1,7 +1,9 @@
 ---
-layout: page
+layout: page.njk
+templateEngineOverride: njk,md
+permalink: /resources.html
+
 title: Resources
-permalink: /resources/
 ---
 
 # Resources for Non-Profits
@@ -10,7 +12,7 @@ Welcome to our resources section. Here you'll find valuable information to help 
 
 ## Available Resources
 
-- [Funding Resources](/resources/funding/): Learn about various funding opportunities for non-profits.
-- [AI Grant Writing](/resources/ai-grant-writing/): Discover how AI can assist in grant writing for non-profits.
+- [Funding Resources](/resources/funding): Learn about various funding opportunities for non-profits.
+- [AI Grant Writing](/resources/ai-grant-writing): Discover how AI can assist in grant writing for non-profits.
 
 We're constantly updating this section with new resources. Check back often for more valuable information!
