--- a/src/_includes/header.njk
+++ b/src/_includes/header.njk
@@ -1,16 +1,14 @@
 <header>
   <div class="header-wrapper">
-    <div class="menu-logo-wrapper">
-      <button class="menu-toggle" aria-label="Toggle menu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-      <div class="logo">
-        <a href="{{ '/' | relative_url }}">
-          <img src="{{ '/assets/images/logo.png' | relative_url }}" alt="Tuba Tech Dynamics Logo">
-        </a>
-      </div>
+    <div class="logo">
+      
+      <a href="{{ '/' | relative_url }}">
+        <img src="{{ '/assets/images/logo-mark.png' | relative_url }}" alt="Tuba the Cat Logo Mark" class="logo-mark">
+      </a>
+
+      <a href="{{ '/' | relative_url }}">
+        <img src="/assets/images/logo-text.png" alt="Tuba Tech Dynamics logo" class="logo-text">
+      </a>
     </div>
     <nav>
       <ul>
