--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -321,7 +321,7 @@ main {
   overflow: hidden;
 
   > h1 {
-    color: $primary-bg-color !important;
+    color: $nav-color !important;
     max-width: 800px;
     margin: 0 auto;
     padding: 0 20px;
