--- a/src/_includes/head.njk
+++ b/src/_includes/head.njk
@@ -6,4 +6,7 @@
   <meta name="keywords" content="Non-profit technology solutions, Custom internal applications for non-profits, AI-powered visualizations, Public engagement tools for non-profits, Tuba Tech Dynamics, Non-profit data analytics, Non-profit custom software development">
   <link rel="stylesheet" href="{{ '/assets/css/styles.css' | relative_url }}">
   <link rel="icon" href="{{ '/assets/images/favicon.ico' | relative_url }}" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" sizes="32x32">
+  <link rel="icon" href="/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 </head>
