--- a/src/_includes/default.njk
+++ b/src/_includes/default.njk
@@ -31,7 +31,7 @@
           var formAction = event.target.getAttribute('action');
           var eventCategory, eventLabel;
           
-          if (formAction.includes('formsubmit.co')) {
+          if (formAction.includes('usebasin.com')) {
             eventCategory = 'Contact Form';
             eventLabel = 'Contact Form Submission';
           } else if (formAction.includes('mailerlite.com')) {
