--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -542,59 +542,14 @@ img {
 }
 
 .services-highlights {
-  padding: 80px 0;
-  background-color: $primary-bg-color;
+  margin: 0; // Remove margin
+  background-color: $pale-purple; // Ensure full width of light purple
+  padding: 20px 0;
 
   .service {
-    background-color: $pale-purple;
-    padding: 40px;
-    margin-bottom: 40px;
-    border-left: 4px solid $rebecca-purple;
-    border-radius: 10px;
-
-    h2 {
-      color: $darkest-purple;
-      font-size: 2rem;
-      margin-bottom: 20px;
-      position: relative;
-      display: inline-block;
-      padding-bottom: 10px; // Add some space for the underline
-
-      &::after {
-        content: '';
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 2px;
-        background-color: $rebecca-purple; // This is your gold color
-      }
-    }
-
-    p, ul {
-      color: $davys-gray;
-      font-size: 1.1rem;
-      line-height: 1.6;
-    }
-
-    ul {
-      list-style-type: none;
-      padding-left: 0;
-
-      li {
-        position: relative;
-        padding-left: 25px;
-        margin-bottom: 10px;
-
-        &::before {
-          content: '•';
-          position: absolute;
-          left: 0;
-          color: $rebecca-purple;
-          font-size: 1.2em;
-        }
-      }
-    }
+    background-color: transparent;
+    margin-bottom: 0;
+    border-radius: 0; // Remove border-radius for full width
   }
 }
 
@@ -674,6 +629,8 @@ img {
 
   h2 {
     color: $primary-bg-color;
+    background-color: transparent;
+    border-left: none;
     font-size: 2rem;
     margin-bottom: 30px;
     line-height: 1.3;
@@ -1149,7 +1106,7 @@ blockquote {
   }
 }
 
-h2 {
+.page-content h2 {
   margin-top: -20px; // Add space above the h2
   margin-bottom: 10px; // Add space below the h2
   padding: 10px; // Add padding for better spacing
