--- a/src/assets/css/styles.scss
+++ b/src/assets/css/styles.scss
@@ -363,17 +363,6 @@ img {
   margin: 0 auto;
 }
 
-.full-width-image {
-  width: 100%;
-  max-width: 100vw;
-  height: auto;
-  margin: 30px 0;
-}
-
-.breakout-image {
-  @extend .full-width-image;
-}
-
 // Content wrapper
 .content-wrapper {
   overflow-x: hidden;
@@ -1106,8 +1095,12 @@ blockquote {
   }
 }
 
+
+.page-content p img {
+  margin-bottom: -2rem;
+}
+
 .page-content h2 {
-  margin-top: -20px; // Add space above the h2
   margin-bottom: 10px; // Add space below the h2
   padding: 10px; // Add padding for better spacing
   font-size: 2rem; // Increase font size
